feat: new paths & schemas, new parameters folder for using as references, fix errors
